add enzo mari remix

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Julian's ART 369</title>
 </head>
 <body>
@@ -11,5 +12,6 @@
     <p><a href="stickynotes/index.html">Sticky Notes</a></p>
     <p><a href="ambient/index.html">Ambient Website</a></p>
     <p><a href="websiteas/index.html">Website As... Garden</a></p>
+    <p><a href="enzo-mari-remix/index.html">Enzo Mari Redux</a></p>
 </body>
 </html>
