add p2 and keyboard instrument

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <h1>Julian's ART 369</h1>
     <p><a href="rawbarsonly/frontend/index.html">Project 1: Raw Bars Only</a></p>
+    <p><a href="p2/index.html">Project 2: Tool for one</a></p>
     <p><a href="stickynotes/index.html">Sticky Notes</a></p>
     <p><a href="ambient/index.html">Ambient Website</a></p>
     <p><a href="websiteas/index.html">Website As... Garden</a></p>
     <p><a href="enzo-mari-remix/index.html">Enzo Mari Redux</a></p>
+    <p><a href="keyboard_instrument/index.html">Keyboard Instrument</a></p>
 </body>
 </html>
