--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Julian's ART 369</h1>
     <p><a href="rawbarsonly/frontend/index.html">Project 1: Raw Bars Only</a></p>
-    <p><a href="p2/index.html">Project 2: Tool for one</a></p>
+    <p><a href="beatevolution/index.html">Project 2: Beat Evolution</a></p>
     <p><a href="stickynotes/index.html">Sticky Notes</a></p>
     <p><a href="ambient/index.html">Ambient Website</a></p>
     <p><a href="websiteas/index.html">Website As... Garden</a></p>
