--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <p><a href="websiteas/index.html">Website As... Garden</a></p>
     <p><a href="enzo-mari-remix/index.html">Enzo Mari Redux</a></p>
     <p><a href="keyboard_instrument/index.html">Keyboard Instrument</a></p>
+    <p><a href="io/index.html">Input/Output</a></p>
 </body>
 </html>
