beat evolution design update

--- a/beatevolution/index.html
+++ b/beatevolution/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Beat Evolution Tool</h1>
+        <h1>Beat Evolution</h1>
         <div id="beatsContainer"></div>
         <button id="evolveButton">Evolve Beats</button>
     </div>
