add cat and fix home style

--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
 </head>
 <body>
     <h1>Julian's ART 369</h1>
-    <p><a href="rawbarsonly/frontend/index.html">Project 1: Raw Bars Only</a></p>
-    <p><a href="beatevolution/index.html">Project 2: Beat Evolution</a></p>
-    <p><a href="stickynotes/index.html">Sticky Notes</a></p>
-    <p><a href="ambient/index.html">Ambient Website</a></p>
-    <p><a href="websiteas/index.html">Website As... Garden</a></p>
-    <p><a href="enzo-mari-remix/index.html">Enzo Mari Redux</a></p>
-    <p><a href="keyboard_instrument/index.html">Keyboard Instrument</a></p>
-    <p><a href="io/index.html">Input/Output</a></p>
+    <ul>
+        <h2>Projects:</h2>
+        <p><a href="rawbarsonly/frontend/index.html">Project 1: Raw Bars Only</a></p>
+        <p><a href="beatevolution/index.html">Project 2: Beat Evolution</a></p>
+        <p><a href="https://www.figma.com/slides/EXG22Rss9ZZYd2LOsKG2zH/Accessibility-Project?node-id=2-237&t=cw3z1R6uVQhv4HDe-1">Project 3: Accessibility</a></p>
+    </ul>
+
+    <ul>
+        <h2>Assignments:</h2>
+        <p><a href="ambient/index.html">Ambient Website</a></p>
+        <p><a href="websiteas/index.html">Website As... Garden</a></p>
+        <p><a href="enzo-mari-remix/index.html">Enzo Mari Remix</a></p>
+        <p><a href="keyboard_instrument/index.html">Keyboard Instrument</a></p>
+        <p><a href="io/index.html">Input/Output</a></p>
+        <p><a href="google-sheet-cms/index.html">Google Sheet CMS</a></p>
+    </ul>
+
+    <h2>Exercises:</h2>
+    <p><a href="slow/index.html">Slow Cat Project</a></p>
 </body>
 </html>
