--- a/google-sheet-cms/index.html
+++ b/google-sheet-cms/index.html
@@ -15,7 +15,7 @@
 
   <div><a href="form.html">Submit data here</a></div>
 
-  <h1>Display data from spreadsheet</h1>
+  <h1>Display data from spreadsheet in reverse order of submission</h1>
   <ol id="sheetData"></ol>
 
   <script src="get-data.js"></script>
