--- a/google-sheet-cms/form.html
+++ b/google-sheet-cms/form.html
@@ -49,7 +49,7 @@
 
     <!-- Customise the Thankyou Message People See when they submit the form: -->
     <div class="thankyou_message" style="display:none;">
-      <h2>Thanks for your submission</h2>
+      <h2>Thanks for your submission. Go to the other page to see the full data now.</h2>
       <div><a href="index.html">See results</a></div>
     </div>
 
