--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <p><a href="keyboard_instrument/index.html">Keyboard Instrument</a></p>
         <p><a href="io/index.html">Input/Output</a></p>
         <p><a href="google-sheet-cms/index.html">Google Sheet CMS</a></p>
+        <p><a href="bookmarklet/index.html">Bookmarklet</a></p>
     </ul>
 
     <h2>Exercises:</h2>
