--- a/index.html
+++ b/index.html
@@ -8,25 +8,24 @@
 </head>
 <body>
     <h1>Julian's ART 369</h1>
+
+    <h2>Projects</h2>
     <ul>
-        <h2>Projects:</h2>
-        <p><a href="rawbarsonly/frontend/index.html">Project 1: Raw Bars Only</a></p>
-        <p><a href="beatevolution/index.html">Project 2: Beat Evolution</a></p>
-        <p><a href="https://www.figma.com/slides/EXG22Rss9ZZYd2LOsKG2zH/Accessibility-Project?node-id=2-237&t=cw3z1R6uVQhv4HDe-1">Project 3: Accessibility</a></p>
+        <li><a href="rawbarsonly/frontend/index.html">Project 1: Raw Bars Only</a></li>
+        <li><a href="beatevolution/index.html">Project 2: Beat Evolution</a></li>
+        <li><a href="https://www.figma.com/slides/EXG22Rss9ZZYd2LOsKG2zH/Accessibility-Project?node-id=2-237&t=cw3z1R6uVQhv4HDe-1">Project 3: Accessibility</a></li>
     </ul>
 
+    <h2>Assignments</h2>
     <ul>
-        <h2>Assignments:</h2>
-        <p><a href="ambient/index.html">Ambient Website</a></p>
-        <p><a href="websiteas/index.html">Website As... Garden</a></p>
-        <p><a href="enzo-mari-remix/index.html">Enzo Mari Remix</a></p>
-        <p><a href="keyboard_instrument/index.html">Keyboard Instrument</a></p>
-        <p><a href="io/index.html">Input/Output</a></p>
-        <p><a href="google-sheet-cms/index.html">Google Sheet CMS</a></p>
-        <p><a href="bookmarklet/index.html">Bookmarklet</a></p>
+        <li><a href="ambient/index.html">Ambient Website</a></li>
+        <li><a href="websiteas/index.html">Website As... Garden</a></li>
+        <li><a href="enzo-mari-remix/index.html">Enzo Mari Remix</a></li>
+        <li><a href="keyboard_instrument/index.html">Keyboard Instrument</a></li>
+        <li><a href="io/index.html">Input/Output</a></li>
+        <li><a href="google-sheet-cms/index.html">Google Sheet CMS</a></li>
+        <li><a href="bookmarklet/index.html">Bookmarklet</a></li>
+        <li><a href="slow/index.html">Slow Cat Project</a></li>
     </ul>
-
-    <h2>Exercises:</h2>
-    <p><a href="slow/index.html">Slow Cat Project</a></p>
 </body>
 </html>
